option java_package = "com.cloudmap.message";
option java_outer_classname = "TaskMessage";

message Task {
  required int64 taskId = 1;
  required int64 clientId = 2;
  optional int64 workerId = 3;

  required string taskType = 4;
  required string bucketName = 5;
  required string splitName = 6;
  optional string responseQueueUrl = 7;
  optional string Keys = 8;

  optional int64 sendTime = 11;
  optional int64 receiveTime = 12;
  optional int64 completeTime = 13;
  optional int64 finishTime = 14;
}

